--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,9 +29,9 @@ application.langs="zh"
 # By convention, the default datasource is named `default`
 #
  db.default.driver=com.mysql.jdbc.Driver
- db.default.url="jdbc:mysql://localhost/smeite"
- db.default.user=root
- db.default.password=smeite!.com1213
+ db.default.url="jdbc:mysql://localhost/smeite2"
+ db.default.user=smeite
+ db.default.password=121325
 
 # Evolutions
 # ~~~~~
