--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,7 +31,7 @@ application.langs="zh"
  db.default.driver=com.mysql.jdbc.Driver
  db.default.url="jdbc:mysql://localhost/smeite"
  db.default.user=root
- db.default.password=smeite!.com1213
+ db.default.password=121325
 
 # Evolutions
 # ~~~~~
