fix bugs for regist

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,7 +62,7 @@ smtp.tls=no
 smtp.user="18053603630"
 smtp.password="813932"
 
-#taobao 阿里妈妈
+#taobao
  taobao_pid=mm_32611004_0_0
  taobao_url="http://gw.api.taobao.com/router/rest"
  taobao_appkey=21136607
