--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,3 +77,6 @@ qq_appid=100344510
 qq_key=da726b47d8660a016d2e334ea27844fc
 qq_url="https://graph.qq.com/oauth2.0/me"
 
+#schedule
+invitePrize.schedule=on
+
