add taobaoke income schedule

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,5 +78,5 @@ qq_key=da726b47d8660a016d2e334ea27844fc
 qq_url="https://graph.qq.com/oauth2.0/me"
 
 #schedule
-invitePrize.schedule=on
+schedule=on
 
