--- a/conf/application.conf
+++ b/conf/application.conf
@@ -29,7 +29,7 @@ application.langs="zh"
 # By convention, the default datasource is named `default`
 #
  db.default.driver=com.mysql.jdbc.Driver
- db.default.url="jdbc:mysql://localhost/smeite2"
+ db.default.url="jdbc:mysql://localhost/smeite"
  db.default.user=smeite
  db.default.password=121325
 
